--- a/src/components/Botao.css
+++ b/src/components/Botao.css
@@ -1,5 +1,5 @@
 .Botao {
-    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.51) 100%);
+    background-color:black;
     border-radius: 10px;
     width: 250px;
     height: 40px;
