--- a/index.css
+++ b/index.css
@@ -9,12 +9,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url("./src/assets/bg4.jpg");
-  background-repeat: repeat;
-  background-size: 800px 600px;
-  background-color: rgba(41, 24, 60, 0.726);
-  background-blend-mode: darken;
-
+  background-image: url("./src/assets/bg5.svg");
+ background-size: cover;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
